--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,18 @@
 {
-	"name": "Emscripten with WASI SDK and Wasmtime",
+	"name": "Emscripten with WASM Tools",
 	"build": {
 		"context": "..",
 		"dockerfile": "../Dockerfile"
 	},
 	"forwardPorts": [
         8080
-    ]
+    ],
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"ms-vscode.cpptools-extension-pack",
+				"vscode-icons-team.vscode-icons"
+			]
+		}
+	}
 }
