Update dev container settings to use the VS Code Icons extension by default.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,10 @@
 			"extensions": [
 				"ms-vscode.cpptools-extension-pack",
 				"vscode-icons-team.vscode-icons"
-			]
+			],
+			"settings": {
+				"workbench.iconTheme": "vscode-icons"
+			}
 		}
 	}
 }
