Group all examples by programming language.

--- a/calculator/c-lang/emcc-plumbing/Makefile
+++ b/calculator/c-lang/emcc-plumbing/Makefile
@@ -7,4 +7,4 @@ all:
 clean:
 	rm -f arith.js arith.wasm
 
-include ../../shared/makefiles/python-http-server.mk
+include ../../../shared/makefiles/python-http-server.mk
