--- a/fizz-buzz/c-lang/emcc-html/Makefile
+++ b/fizz-buzz/c-lang/emcc-html/Makefile
@@ -4,4 +4,4 @@ all:
 clean:
 	rm -f fizz-buzz.html fizz-buzz.js fizz-buzz.wasm
 
-include ../../shared/makefiles/python-http-server.mk
+include ../../../shared/makefiles/python-http-server.mk
